--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@
 # production
 /build
 
+
+# Environment variables
+.env
+
+# IDE and editor files
+.idea/
+.vscode/
+
 # misc
 .DS_Store
 .env.local
